Fix AP and Must see icons and label alignemnt.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -306,7 +306,7 @@ div.left-navigation-sidebar {
       }
 
       @include big_web() {
-        &:not(.item-selected):hover {
+        &:not(.item-selected):hover, &:not(.item-selected):active {
           @include item-hover();
         }
       }
@@ -317,7 +317,7 @@ div.left-navigation-sidebar {
     }
 
     div.all-posts-label, div.drafts-label, div.must-read-label {
-      padding: 2px 5px 1px 5px;
+      padding: 2px 0px 0px 16px;
       width: 148px;
       text-align: left;
       margin-left: 16px;
@@ -332,7 +332,7 @@ div.left-navigation-sidebar {
 
     div.all-posts-icon {
       background-image: cdnUrl("/img/ML/digest_icon_grey.svg");
-      background-size: 12px 16px;
+      background-size: 16px 16px;
       background-repeat: no-repeat;
       background-position: center;
       width: 16px;
@@ -354,11 +354,11 @@ div.left-navigation-sidebar {
     div.must-read-icon {
       background-image: cdnUrl("/img/ML/must_see_bolt.svg");
       background-size: 18px 16px;
+      background-position: center;
+      background-repeat: no-repeat;
       width: 16px;
-      height: 16px;
+      height: 28px;
       float: left;
-      margin-left: -4px;
-      margin-top: 6px;
 
       @include mobile() {
         margin-left: 0px;
@@ -525,7 +525,7 @@ div.left-navigation-sidebar {
         }
 
         @include big_web() {
-          &:not(.item-selected):hover {
+          &:not(.item-selected):hover, &:not(.item-selected):active {
             @include item-hover();
           }
         }
